# web-minifier

./: README.md  pyproject.toml
minifier/: __main__.py  html.py
tests/: test_css_minification.py  test_html_minification.py  test_json_minification.py  test_xml_minification.py
webminifier/: __init__.py  __main__.py  html.py
